{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 127,
  "lineage": "e4d40f8f-16c6-00b4-04bd-34e92a10daf7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "windows-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05bf62cd933ce7e44",
            "domain": "vpc",
            "id": "eipalloc-05bf62cd933ce7e44",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-203-34.compute-1.amazonaws.com",
            "public_ip": "3.228.203.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "thinknyx-dev-windows-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "thinknyx-dev-windows-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bde1eb2c18cb2abe",
            "arn": "arn:aws:ec2:us-east-1:355496310271:instance/i-04ed2f8b0a2075af9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:355496310271:key/46fc41d0-5b4b-4128-9ee9-62be7d4f2214",
                "throughput": 0,
                "volume_id": "vol-0dee5d24328b8f862",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ed2f8b0a2075af9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "thinknyx-dev-windows-us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca1855f9261bec95",
            "private_dns": "ip-10-11-1-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.11.1.178",
            "public_dns": "ec2-18-213-218-12.compute-1.amazonaws.com",
            "public_ip": "18.213.218.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:355496310271:key/46fc41d0-5b4b-4128-9ee9-62be7d4f2214",
                "throughput": 0,
                "volume_id": "vol-01eb6665543f51800",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-012a0abe56f7391bc",
            "tags": {
              "Environment": "dev",
              "Name": "thinknyx-dev-windows-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "thinknyx-dev-windows-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3d11bba353852ae"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.aws-windows-sg",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.windows-2022",
            "data.template_file.windows-userdata",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355496310271:internet-gateway/igw-0021448943ac839b7",
            "id": "igw-0021448943ac839b7",
            "owner_id": "355496310271",
            "vpc_id": "vpc-00c449a68d8091706"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355496310271:route-table/rtb-04f371e4d6fe2ca8e",
            "id": "rtb-04f371e4d6fe2ca8e",
            "owner_id": "355496310271",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0021448943ac839b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c449a68d8091706"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051aaf352a6322e35",
            "route_table_id": "rtb-04f371e4d6fe2ca8e",
            "subnet_id": "subnet-012a0abe56f7391bc"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-windows-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355496310271:security-group/sg-0a3d11bba353852ae",
            "description": "Allow incoming connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3d11bba353852ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming RDP connections",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "thinknyx-dev-windows-sg",
            "name_prefix": "",
            "owner_id": "355496310271",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "thinknyx-dev-windows-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "thinknyx-dev-windows-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00c449a68d8091706"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355496310271:subnet/subnet-012a0abe56f7391bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012a0abe56f7391bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355496310271",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00c449a68d8091706"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355496310271:vpc/vpc-00c449a68d8091706",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0182cc2c7706e7967",
            "default_route_table_id": "rtb-0cbe0393a256037e4",
            "default_security_group_id": "sg-01ad90d1d9462a60b",
            "dhcp_options_id": "dopt-087b7742c0f9db09d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00c449a68d8091706",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cbe0393a256037e4",
            "owner_id": "355496310271"
          }
        }
      ]
    }
  ]
}